Implementación backend Sprint 3: Creación de clases Adicion y Cliente, con sus debidas variantes (Repo, Model, Controller, Service) implementación de BD usando JPA y H2, se dejaron quietos los métodos CRUD de Productos pq @Santos ya los había creado